# blurtool2

./: CMakeLists.txt  README.md  cameraman.npy  main.cpp
include/: blur.h  blur.hpp  image.h  image.hpp
src/: CMakeLists.txt  blur.cpp  blur.cu  image.cpp  image.cu
test/: CMakeLists.txt  test_blur.cpp  test_image.cpp  test_image_2x3.npy  test_image_2x3_f8.npy
